--- a/readme
+++ b/readme
@@ -16,3 +16,5 @@ You also need:
 After installing gym, cd to DeepRLDeduplication/code/gym-dedup/, then run "pip3 install -e ." (do not forget the period(.) ) to install the environment that the RL agent will be interacting with.
 
 This project also need the hf-stat tool to run Download the tool at: https://tracer.filesystems.org/fs-hasher-0.9.5.tar.gz
+
+Download testing data at https://drive.google.com/file/d/1Q8JgaedF-W7MI1-xrbYbnNDdH42SzYdq/view?usp=sharing
